Fix alignment for mobile

--- a/css/custom/custom.scss
+++ b/css/custom/custom.scss
@@ -16,6 +16,5 @@ a:hover  {
 @media only screen and (max-width: 600px) {
   .section-title {
     text-align: center;
-    margin-bottom: 5%;
   }
 }
